# replit-gen-AccessibilityInspector

./: .gitignore  .replit  CLAUDE.md  LICENSE  README.md  accessibility_checker.py  ai_evaluator.py  app.py  pyproject.toml  report_generator.py  requirements.txt  update_wcag_versions.py  wcag_criteria.py
src/: accessibility_checker.py  ai_evaluator.py  report_generator.py
